--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>Project Health App</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div>
+            <div class="banner">
+                <div>
+                    <img src="" alt="">
+                </div> 
+
+            </div>
+        </div>
+
+
+    </header>
     <main></main>
     <footer></footer>
 
