--- a/index.html
+++ b/index.html
@@ -11,16 +11,162 @@
     <header>
         <div>
             <div class="banner">
-                <div>
-                    <img src="" alt="">
+                <div class="banner-left">
+                    <img src="./assets/img/path-banner-left.png" alt="green pattern left">
                 </div> 
 
+                <div class="banner-mid">
+                    <img src="./assets/img/Icon-banner-mid.png" alt="green ball icon">
+                </div>
+                <div>
+                    <p> Join Our Personalized Nutrition Demo For Free </p>
+                </div>
+                <div>
+                    <img src="./assets/img/banner-arrow.png" alt="arrow direction right">
+                </div>
+
+                <div class="banner-right">
+                    <img src="./assets/img/path-banner-right.png" alt="green pattern right">
+                </div>
+            </div>
+
+            <div class="navigation">
+                <div class="logo-left">
+                    <img src="./assets/img/logo-icon-nutritionist.png" alt="company logo green design">
+                    <h2>Nutritionist</h2>
+                </div>
+                
+                <div class="logo-right">
+                    <div>
+                        <a href="#">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Team</a>
+                        <a href="#">Process</a>
+                        <a href="#">Pricing</a>
+                        <a href="#">Blog</a>
+                    </div>
+                    <div class="button"></div>   
+                        <a href="" class="contact-btn">Contact Us</a>
+                    </div>   
+                </div>
             </div>
         </div>
 
 
     </header>
-    <main></main>
+<!-------------------- welcome ----flexbox main, und butttons---------------->
+    <main>
+    <section class="welcome">
+        <div class="welcome-left">
+            <img src="./assets/img/Image-sports.png" alt="smiling woman in sports dress">
+        </div>
+
+        <div class="welcome-right">
+            <div>
+                <h3>Transform Your ❤️  Health with</h3>
+            <!-- denk nach! linie bau ich mit border unten?-->
+                <h1>Personalized Nutrition Coaching</h1>
+                <p>Welcome to Nutritionist, your partner in achieving optimal health through personalized nutrition coaching. Our certified nutritionists are here to guide you on your weight loss journey, providing customized plans and ongoing support. Start your transformation today and experience the power of personalized nutrition coaching.</p>
+            </div>
+            <div>
+                <!-- buttons flex -->
+            </div>
+            <div>
+                <!-- testimonials flex, 3x img, übereinander, position z-index/Minuswerte -->
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <!-- <p><span>430+</span>Happy Customers</p> -->
+                </div>
+            </div>
+        <div>
+    </section>
+
+<!-- section features: grid bauen für 6er raster, dann flex icon/Intro oder 2xflex, testen. Raster hat gap-->
+    <section>
+        <div class="features-intro">
+            <h4>Features</h4>
+            <p>Welcome to the Feature Section of Nutritionist, your ultimate destination for all things nutrition and wellness.</p>
+        </div>
+        <!--hier 6er: icon+h5+p-->
+        <div>
+            <div>
+                <img src="./assets/img/Icon-personalized.png" alt="icon flower">
+                <h5>Personalized Nutrition Plans</h5>
+            </div>
+            <div>
+            <p>Receive a tailored nutrition plan designed specifically for your body and goals. Our certified nutritionists will consider your unique needs, dietary preferences, and health conditions to create a plan that suits you best.</p>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <img src="./assets/img/Icon-guidance.png" alt="diploma baret">
+                <h5>Guidance from Certified Nutritionists</h5>
+            </div>
+            <div>
+            <p>Our team of experienced and certified nutritionists will provide professional guidance and support throughout your journey. They will answer your questions, address your concerns, and keep you motivated as you work towards your goals.</p>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <img src="./assets/img/Icon-food.png" alt="fork and knife icon">
+                <h5>Food Tracking and Analysis</h5>
+            </div>
+            <div>
+            <p>Effortlessly track your food intake using our user-friendly app. Our nutritionists will analyze your data to provide insights into your eating habits, help you identify areas for improvement, and make personalized recommendations.</p>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <img src="./assets/img/Icon-meal.png" alt="menu icon">
+                <h5>Meal Planning and Recipes</h5>
+            </div>
+            <div>
+            <p>Access a vast collection of delicious and healthy recipes tailored to your dietary needs. Our nutritionists will also create personalized meal plans, making it easier for you to stay on track and enjoy nutritious meals.</p>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <img src="./assets/img/Icon-lifestyle.png" alt="iron icon">
+                <h5>Lifestyle and Behavior Coaching</h5>
+            </div>
+            <div>
+            <p>Achieving sustainable results requires more than just a diet plan. Our nutritionists will work with you to develop healthy habits, address emotional eating, and provide strategies to overcome obstacles along the way.</p>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <img src="./assets/img/Icon-workshops.png" alt="bag icon">
+                <h5>Nutritional Education and Workshops</h5>
+            </div>
+            <div>
+            <p>Expand your knowledge of nutrition through informative articles and educational workshops. Our nutritionists will equip you with the knowledge and tools to make informed choices for long-term success.</p>
+            </div>
+        </div>
+    </section>
+
+<!-- section intro calorie calculator-->
+    <section>
+        <div class="calorie-intro">
+            <h4>Test your daily Calorie Requirement</h4>
+            <p>To determine your daily calorie requirement, we need some information about your age, gender, weight, height and activity level. Enter this information to calculate your individual requirements.</p>
+        </div>
+        <div></div>
+    </section>
+    <section><!-- form +js--></section> 
+</main>
     <footer></footer>
 
     
