--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <img src="./assets/img/Image-testimonial-two.png" alt="female customer in yellow sweater">
                 <img src="./assets/img/Image-testimonial-three.png" alt="female customer in green sweater">
             </div>
-                <p class="customer-reference"><span>430+</span>  Happy Customers</p> 
+                <p class="customer-reference"><span>430+ </span> Happy Customers</p> 
         <div>
     </section>
 <!------------------ section features intro -------->
@@ -224,9 +224,9 @@
                 <a href="#">Pricing</a>
                 <a href="#">Blog</a>
             </div>
-            <div class="anchor-to-top"></div>   
-                <a href="" class="btn-top">Go To Top</a>
-                <img src="./assets/img/arrow-small-up.png" alt="arrow direction up">
+            <div class="btn-arrow-up"></div>   
+                <a href="#">Go To Top</a>
+                <img src="./assets/img/button-arrow-up.png" alt="arrow direction up">
             </div>  
         </div>
 
