--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 </main>
 <!------------styling footer ------------------>
     <footer>
-        <div class="navigation">
+        <div class="footer-navigation">
             <div class="logo-left">
                 <img src="./assets/img/logo-icon-nutritionist.png" alt="company logo green design">
                 <h2>Nutritionist</h2>
@@ -224,13 +224,13 @@
                 <a href="#">Pricing</a>
                 <a href="#">Blog</a>
             </div>
-            <div class="btn-arrow-up"></div>   
+            <div class="f-menu-right">   
                 <a href="#">Go To Top</a>
                 <img src="./assets/img/button-arrow-up.png" alt="arrow direction up">
             </div>  
         </div>
 
-        <div class="banner">
+        <!-- <div class="banner">
             <div class="button-mail">
                 <img src="./assets/img/Icon-letter.png" alt="icon mail">
                 <a href="#" class="btn-mail">hello@squareup.com</a>
@@ -246,7 +246,7 @@
             <div class="imprint-copyright"> 
                 <p>© 2023 Nutritionist. All rights reserved.</p>
             </div>
-        </div>
+        </div> -->
     </footer>
 </body>
 </html>
